@startuml
UserApplicationService x--> UserData: 返却データ生成
UserApplicationService x--> User: 値を利用する
UserApplicationService x--> UserRepository: ユーザ情報を取得
UserRepository .> User: 値の依存
User <. UserData: 値の依存

class User {
  - userName: UserName
  - userID: UserID
}
class UserData {
  - userName: string
  - userID: string
  + Name() string
  + UserID() string
}
note right
DTO
endnote

class UserApplicationService {
  - userRepository: UserRepository
  + Get(userName string) (*UserData, error)
}
interface UserRepository {
  FindByID(id UserID) (*User, error)
  FindByName(name UserName) (*User, error)
  Save(user User) error
  Delete(user User) error
}
@enduml
